windows: call l10n_util::OverrideLocaleWithUILanguageList() earlier

As part of bug 800358 I moved loading ResourceBundle earlier
(specificaly to PreEarlyInitialization()). Unfortunately I missed that
OverrideLocaleWithUILanguageList() needs to be called before
this. This means the locales were not being picked up correctly for
Windows. This patch moves calling OverrideLocaleWithUILanguageList()
to before PreEarlyInitialization() so that locales are properly
loaded.

I tried adding a DCHECK that the locales are set before
GetLocaleOverrides() is called, but that appears to break things.

BUG=834372
TEST=see bug

Change-Id: Idb40ee30761034a6c67ac153da3f9cebc9f7de40
Reviewed-on: https://chromium-review.googlesource.com/1025070
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552935}
Former-commit-id: d95d2408c4f2fd067abc806e0cab477f27e378a3